Changing games downloading to Dropbox downloading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,7 +100,9 @@
       <h4>Suivre le projet</h4>
       <div class="projectLinks">
         <div class="dlButton">
-          <input type="button" value="Télécharger" class="btn" onclick="window.location='assets/downloads/HELLBLAZE.zip';">
+          <form action="https://www.dropbox.com/s/f9m2b6j9wznh3xs/HELLBLAZE.zip?dl=0" target="_blank">
+            <input type="submit" value="Télécharger" class="btn">
+          </form>
         </div>
       </div>
     </div>
@@ -161,7 +163,9 @@
       <h4>Suivre le projet</h4>
       <div class="projectLinks">
         <div class="dlButton">
-          <input type="button" value="Télécharger" class="btn" onclick="window.location='assets/downloads/ERROR_418.zip';">
+          <form action="https://www.dropbox.com/s/cx7aincvayvcbi5/ERROR_418.zip?dl=0" target="_blank">
+            <input type="submit" value="Télécharger" class="btn">
+          </form>
         </div>
         <div class="otherProjectLinks">
           <p>Vous pouvez aussi retrouver le jeu sur <a href="https://globalgamejam.org/2020/games/error-418-6">le site GGJ</a> ou sur <a href="https://github.com/gabrieldrn/ERROR-418">sa page GitHub !</a></p>
