--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -76,7 +76,7 @@ $selection-color-img: rgba(255, 253, 97, 0.6);
 }
 
 #profileDesc {
-  padding-right: 70px;
+  margin-right: 50px;
   margin-left: 50px;
   width: 70vw;
   float: left;
@@ -93,7 +93,8 @@ $selection-color-img: rgba(255, 253, 97, 0.6);
   color: white;
   background-color: black;
   text-align: center;
-  text-indent: 50px;
+  text-indent: 0px !important;
+  padding: 5px;
   font-size: 20px;
   font-family: 'Fira Sans', sans-serif;
 }
@@ -121,12 +122,13 @@ $selection-color-img: rgba(255, 253, 97, 0.6);
   }
 
   #profileDesc h1 {
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
   }
 
   #profileDesc p {
     font-size: 20px;
+    padding: 10px;
   }
 }
 
@@ -137,13 +139,20 @@ $selection-color-img: rgba(255, 253, 97, 0.6);
 }
 
 .nextImg {
+    position: relative;
+    height: 100px;
+    width: 100px;
+    clear: both;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.nextImg img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
   max-width: 100%;
-  width: 5%;
-  display: block;
-  padding-top: 25px;
-  margin-left: auto;
-  margin-right: auto;
-  clear: both;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -163,7 +172,7 @@ $selection-color-img: rgba(255, 253, 97, 0.6);
   .content {
     margin-top: 50px;
     padding-left: 10px;
-    padding-right: 50px;
+    padding-right: 10px;
   }
 }
 
@@ -173,6 +182,11 @@ $selection-color-img: rgba(255, 253, 97, 0.6);
   margin-bottom: 25px;
   background-color: $primary-color-light;
   border-radius: 5px;
+}
+
+.logosWrapper {
+  text-align: center;
+  margin-bottom: 25px;
 }
 
 .logos {
