Added dot navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <!-- Liste de navigation en points -->
-  <!-- <div data-aos="zoom-in" class="dotstyle dotstyle-smalldotstroke">
+  <div data-aos="zoom-in" class="dotstyle dotstyle-smalldotstroke">
   	<ul>
   		<li (click)="isCurrent(1)" [ngClass]="{'current': selectedDot === 1}"><a href="#anchorTop">Top</a></li>
   		<li (click)="isCurrent(2)" [ngClass]="{'current': selectedDot === 2}"><a href="#anchorSkills">Hellblaze</a></li>
@@ -22,7 +22,7 @@
   		<li (click)="isCurrent(4)" [ngClass]="{'current': selectedDot === 4}"><a href="#anchor2DFight">2DFight</a></li>
   		<li (click)="isCurrent(5)" [ngClass]="{'current': selectedDot === 5}"><a href="#anchorOthers">Others Projects</a></li>
   	</ul>
-  </div> -->
+  </div>
 
   <!-- Content -->
   <div class="aboutSection">
